# topic_based_ros2_control

./: .clang-format  .gitignore  .pre-commit-config.yaml  .prettierrc.cjs  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  isaac_ros2_control.repos  isaac_ros2_control_plugin_description.xml  issac_ros2_control.repos  issac_ros2_control_plugin_description.xml  package.xml  pyproject.toml  topic_based_ros2_control_plugin_description.xml
.github/workflows/: build_and_test.yaml  format.yaml
config/: isaac_moveit.py
doc/: developer.md  installation.md  user.md
include/isaac_ros2_control/: isaac_system.hpp
include/issac_ros2_control/: issac_system.hpp
include/topic_based_ros2_control/: topic_based_system.hpp
src/: isaac_system.cpp  issac_system.cpp  topic_based_system.cpp
test/: control.launch.py  diffbot_with_rrr.urdf.xacro  isaac_system_test.cpp  issac_system_test.cpp  ros2_control.test.py  ros2_controllers.yaml  rrr.urdf.xacro  test_topic_based_robot.py  topic_based_robot.py  topic_based_system_test.cpp
