<?xml version="1.0"?>
<package format="3">
    <name>topic_based_ros2_control</name>
    <version>0.0.1</version>
    <description>ros2 control hardware interface for topic_based sim</description>

    <maintainer email="jafar@picknik.ai">Jafar</maintainer>
    <author email="jafar@picknik.ai">Jafar</author>

    <license>BSD</license>

    <url type="website">https://github.com/PickNikRobotics/topic_based_ros2_control</url>
    <url type="bugtracker">https://github.com/PickNikRobotics/topic_based_ros2_control/issues</url>
    <url type="repository">https://github.com/PickNikRobotics/topic_based_ros2_control/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>s

    <depend>rclcpp</depend>
    <depend>hardware_interface</depend>
    <depend>sensor_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>picknik_ament_copyright</test_depend>
    <test_depend>ros2_control_test_assets</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
